# hexacopter_ardupilot

./: CMakeLists.txt  README.md  package.xml
bash files/: mbk_startsitl.sh  startsitl.sh
config/: joint_names_hexacopter.yaml
launch/: display.launch  gazebo.launch  hexa_display.launch  hexa_iris.launch  hexacopter_runway.launch  static_map_plugin.launch  typhoon_h480_ardupilot.launch
models/hexa_drone_with_camera/: model.config  model.sdf
models/hexa_drone_with_camera/meshes/: Prop_4.STL  Prop_5.STL  Prop_5.dae
models/hexa_iris/: model.config  model.sdf
models/hexa_iris_ardupilot/: model.config  model.sdf
models/hexa_iris_drone_with_camera/: model.config  model.sdf
models/hexacopter/: model.sdf
models/hexacopter-ZD1250/: model.config  model.sdf
models/hexacopter-ZD1250/meshes/: Prop_2.STL  Prop_3.STL  Prop_4.STL  Prop_5.STL
models/hexacopter/meshes/: Prop_1.dae
models/hexacopter_ZD1250/: model.config  model.sdf
models/hexacopter_ZD1250/meshes/: Prop_1.STL  Prop_6.STL
models/hexacopter_v2_mbk/: model.sdf
models/hexacopter_v2_mbk/meshes/: CCW_1355_prop.STL  CW_1355_prop.dae  Prop_3.STL
models/hexacopter_v3_final/: hexacopter_v3_final.sdf  model.config
models/hexacopter_v3_final/meshes/: CCW_1355_prop.STL
models/typhoon_h480_ardupilot/: typhoon_h480.sdf
urdf/: hexacopter.csv  hexacopter.urdf
urdf/meshes/: CCW_1355_prop.dae  CW_1355_prop.STL  Prop_1.STL  Prop_2.STL  Prop_2.dae  Prop_3.dae  Prop_4.dae  Prop_6.STL  Prop_6.dae
world/: display.world  hexa_iris_world.world  hexacopter_runway.world  static_map_plugin.world  typhoon1.world
